# MCPData

./: .env.example  .pre-commit-config.yaml  README.md  bandit-report.json  bandit.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: index.md
docs/concepts/: architecture.md  mcp.md  semantic-layer.md
docs/guides/: configuring-connections.md  nl-to-sql.md  ontology-generation.md  security.md
examples/: demo_trino.md
ontologies/: customer_sales.yml
src/db_semantic_layer/cli/: app.py
src/db_semantic_layer/core/: config.py  engine_manager.py  models.py  schema_introspect.py  sql_validator.py
src/db_semantic_layer/mcp/: server.py  tools.py
src/db_semantic_layer/semantic/: embeddings.py  nl2sql.py  ontology.py  ontology_generation.py  ontology_loader.py  retriever.py
src/db_semantic_layer/utils/: telemetry.py
tests/: test_cli_ontology_generate.py  test_engine_manager.py  test_mcp_semantic_query.py  test_sql_validator.py
